# metadata-schemas

./: .gitignore  .gitlab-ci.yml  .pdm-python  Dockerfile  Prod.Dockerfile  README.md  debug_repository.py  eLTERMetadataSchemaDatasets.json  eLTERMetadataSchemaDatasets_monolith.json  eLTERMetadataSchemaExternalDatasets.json  eLTERMetadataSchemaExternalDatasets_monolith.json  invenio.cfg  invenio_datasets.json  make-monolith.js  nrp  oarepo.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  subschemas-from-monolith.js  variables
.github/workflows/: make-monolith.yml  subschemas-from-monolith.yml
custom_api/views/: __init__.py
docker/: Dockerfile.production  development.crt  development.key  docker-compose.yml
docs/: commands.txt  files_requests.md
docs/new_docs/: code.md  db.md  main.md  models.md  nrp.md  problems.md  setup.md  validate.R
docs/new_docs/assets/: _actual_schema.md  _base.md  _template.md  alternateIdentifiers.md  assetType.md  authors.md  contactPoint.md  contributors.md  creators.md  dataLevel.md  descriptions.md  ecosystem.md  externalWorkflows.md  files.md  geoLocations.md  geoServerInfo.md  habitatReference.md  instrumentation.md  keywords.md  language.md  licenses.md  methods.md  projects.md  propertyRights.md  publicationDate.md  relatedIdentifiers.md  responsibleOrganisations.md  shortNames.md  siteReferences.md  taxonomicCoverages.md  temporalResolution.md  temportalCoverages.md  titles.md
docs/new_docs/elter_model/: ResourceType  ResourceType.md  SOReference.md  _base.md  _template.md  additionalMetadata.md  alternateIdentifiers.md  assetType.md  authors.md  contributors.md  dataLevel.md  datasetIds.md  descriptions.md  ecosystem.md  externalFiles.md  geoLocations.md  habitatReference.md  instrumentation.md  keywords.md  language.md  licenses.md  methods.md  project.md  propertyRights.md  publicationDate.md  relatedIdentifiers.md  responsibleOrganisations.md  shortNames.md  siteReference.md  temporalResolution.md  temportalCoverages.md  titles.md
docs/new_docs/external_assets/: _base.md
i18n/translations/: messages.mo  messages.pot
lter/: config.py  ext.py  proxies.py
lter/files/: api.py  models.py
lter/files/requests/: resolvers.py
lter/models/: records.json  ui.json
lter/records/: api.py  models.py
lter/records/dumpers/: dumper.py  edtf.py
lter/records/jsonschemas/: lter-1.0.0.json
lter/records/requests/: resolvers.py
lter/resources/files/: config.py  resource.py  ui.py
lter/resources/records/: config.py  resource.py  ui.py
lter/services/files/: config.py  schema.py  service.py  ui_schema.py
lter/services/records/: config.py  facets.py  permissions.py  results.py  schema.py  search.py  service.py  ui_schema.py
lter/translations/: messages.pot
lter/views/draft_files/: api.py  app.py
lter/views/files/: api.py  app.py
lter/views/records/: api.py  app.py
lter/views/request_types/: api.py  app.py
lter/views/requests/: api.py  app.py
models/: lter-datatypes-new.yaml  lter-datatypes.yaml  lter-external_workflows.yaml  lter-facets.yaml  lter-metadata-new.yaml  lter-metadata.yaml  lter-requests.yaml  lter.yaml  settings.yaml
sample-data/: 001.json  001_with_files.json  API.rest  create_draft.rest  create_sample_data.sh  draft_requests.rest  easyjson.json  external_workflow.rest  filtering.rest  init_data.sh  records.rest  requests.rest  sample1.json  sample2.json  test.rest  test2.rest  update_draft.rest  upload_file.rest
shared/alembic/: elter_dar_1_create_elter_dar_branch.py  elter_dar_2_initial_revision.py
shared/requests/: actions.py  external_workflow.py  external_workflow_transitions.py
shared/resources/: __init__.py
shared/services/components/: lter_component.py
shared/services/files/: config.py  processors.py
shared/services/records/: search.py  service.py
shared/templating/: filters.py
shared/workflows/: default.py
subschemas/: additionalMetadata.json  alternateIdentifiers.json  assetType.json  contactPoints.json  contributors.json  creators.bak.json  creators.json  dataLevel.json  datasetIds.json  datasetType.json  descriptions.json  externalSourceInformation.json  files.json  geoLocations.json  habitatReferences.json  keywords.json  language.json  licenses.json  methods.json  onlineDistributionLinks.json  projects.json  publicationDate.json  relatedIdentifiers.json  responsibleOrganizations.json  siteReferences.json  taxonomicCoverages.json  temporalCoverages.json  temporalResolution.json  titles.json
ui/branding/: webpack.py
ui/branding/templates/: NotFound.jinja  PermissionDenied.jinja  base_page.html  elter_base_js.html  footer.html  header.html  header_frontpage.html  header_login.html
ui/lter/: __init__.py  webpack.py
ui/lter/components/: lter_component.py
ui/lter_dashboard/: __init__.py
ui/lter_dashboard/templates/: LterDashboardPage.jinja
ui/quality_checks/: __init__.py
ui/titlepage/: __init__.py
utils/db-backup/: Dockerfile  backup.sh
(+133 files in other folders)
