[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "json5",
    "nr-vocabularies>=2.0.0",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime>=1.5.34",
    "oarepo-ui>=5.1.32",
    "oarepo-vocabularies>=2.0.88",
    "oarepo==12.*",
    "python-dotenv",
]
requires-python = ">=3.10,<3.11"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_lter = "ui.lter.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
components = "ui.components:create_blueprint"
lter = "lter.views.records.app:create_app_blueprint"
lter_requests = "lter.views.requests.api:create_api_blueprint"
ui_lter = "ui.lter:create_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
lter = "lter"

[project.entry-points."invenio_db.alembic"]
repo = "shared:alembic"

[project.entry-points."invenio_base.api_apps"]
lter = "lter.ext:LterExt"

[project.entry-points."invenio_base.apps"]
lter = "lter.ext:LterExt"

[project.entry-points."invenio_db.models"]
lter = "lter.records.models"

[project.entry-points."invenio_base.api_blueprints"]
lter = "lter.views.records.api:create_api_blueprint"
lter_requests = "lter.views.requests.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
lter = "lter.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
lter = "lter.records.jsonschemas"

[project.entry-points."oarepo.models"]
lter = "lter.models:records.json"

[project.entry-points."oarepo.ui"]
lter = "lter.models:ui.json"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
