[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "json5",
    "nr-vocabularies>=2.0.0",
    "oarepo-communities>=1.0.0",
    "oarepo-dashboard>=1.0.0",
    "oarepo-global-search>=1.0.23",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime>=1.5.34",
    "oarepo-ui>=5.1.32",
    "oarepo-vocabularies>=2.0.88",
    "oarepo-workflows>=1.0.0",
    "oarepo==12.1.*",
    "oarepo-oidc-einfra==1.0.3",
    "python-dotenv",
]
requires-python = ">=3.12,<3.13"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_lter = "ui.lter.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
components = "ui.components:create_blueprint"
lter = "lter.views.records.app:create_app_blueprint"
lter_requests = "lter.views.requests.app:create_app_blueprint"
ui_lter = "ui.lter:create_blueprint"
lter_request_types = "lter.views.request_types.app:create_app_blueprint"
lter_file = "lter.views.files.app:create_app_blueprint"
lter_file_draft = "lter.views.draft_files.app:create_app_blueprint"
ui_lter_dashboard = "ui.lter_dashboard:create_blueprint"
ui_quality_checks = "ui.quality_checks:create_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
lter = "lter"

[project.entry-points."invenio_db.alembic"]
repo = "shared:alembic"

[project.entry-points."invenio_base.api_apps"]
lter = "lter.ext:LterExt"

[project.entry-points."invenio_base.apps"]
lter = "lter.ext:LterExt"

[project.entry-points."invenio_db.models"]
lter = "lter.records.models"
lter_file = "lter.files.models"
lter_file_draft = "lter.files.models"

[project.entry-points."invenio_base.api_blueprints"]
lter = "lter.views.records.api:create_api_blueprint"
lter_requests = "lter.views.requests.api:create_api_blueprint"
lter_request_types = "lter.views.request_types.api:create_api_blueprint"
lter_file = "lter.views.files.api:create_api_blueprint"
lter_file_draft = "lter.views.draft_files.api:create_api_blueprint"
lter_api = "custom_api.views:api"

[project.entry-points."invenio_search.mappings"]
lter = "lter.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
lter = "lter.records.jsonschemas"

[project.entry-points."oarepo.models"]
lter = "lter.models:records.json"

[project.entry-points."oarepo.ui"]
lter = "lter.models:ui.json"

[project.entry-points."invenio.lter.response_handlers"]
lter = "shared.resources:lter_serializers"

[project.entry-points."invenio_requests.types"]
run_external_workflow = "shared.requests.external_workflow:ExternalWorkflowRequestType"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
